<resources>
    <string name="app_name">OpenWeatherWellCom</string>
    <string name="city_name">City</string>
    <string name="btn_ok">OK</string>
    <string name="empty_field">N/D</string>
    <string name="humidity_label">%1$s%%</string>
    <string name="pressure_label">%1$s mmHg</string>
    <string name="wind_speed_label">%1$s m/s</string>
    <string name="wind_degree_label">%1$s\'</string>
    <string name="no_data">No data!</string>
    <string name="temperature_label">\'C</string>
    <string name="btn_settings">Change City</string>
    <string name="select_city_title">Select City</string>
    <string name="error_incorrect_input">Incorrect input</string>

    <string name="content_descriptor_temperature">temperature</string>
    <string name="content_descriptor_humidity">humidity</string>
    <string name="content_descriptor_pressure">pressure</string>
    <string name="content_descriptor_wind">wind</string>

</resources>
